# apriltag_tracker

./: CMakeLists.txt  README.md  package.xml
calibrations/: camera.yaml  camera_high_res.yaml  camera_high_wide_res.yaml  camera_med_high_wide_res.yaml  camera_ultra_high_wide_res.yaml
cfg/: DynamicAprilTagTracker.cfg  DynamicCamera.cfg  DynamicServo.cfg  TFTest.cfg  apriltag_tracker.cfg  image_view.rviz  tftest.cfg
config/: image_view.rviz
docs/: notes-20180207.txt
include/: apriltag_tracker.h  camera.h  camera_info.h  comm_layer_defs.h  dynamixel.h  dynamixel_host_layer.h  errors.h  host_comm_layer.h  tag.h  timers.h  transform.h  transforms_cache.h
include/apriltag_tracker/: AprilTagDetection.h  AprilTagDetectionArray.h  apriltag_tracker.h  camera.h  errors.h  tag.h  timers.h  transform.h  transforms_cache.h
include/pose_estimate_filter/: pose_estimate_filter.h
msg/: ATTDiagnostics.msg  ATTGlobalTiming.msg  ATTLocalTiming.msg  AprilTagDetection.msg
src/: apriltag_tracker.cpp  apriltag_tracker_node.cpp  camera.cpp  camera_info.cpp  dynamixel.cpp  dynamixel_host_layer.cpp  host_comm_layer.cpp  main.cpp  speedtest.cpp  tag.cpp  test.cpp  tftest.cpp  timers.cpp  transform.cpp  transforms_cache.cpp
src/apriltag_tracker/: apriltag_tracker.cpp  apriltag_tracker_node.cpp  camera.cpp  camera_info.cpp  tag.cpp  timers.cpp  transform.cpp  transforms_cache.cpp
src/pose_estimate_filter/: pose_estimate_filter.cpp  pose_estimate_filter_node.cpp
src/tests/: apriltag_tracker_tests.cpp  camera_tests.cpp  servo_tests.cpp  tag_tests.cpp  timer_tests.cpp  transform_tests.cpp
src/tests/apriltag_tracker/: apriltag_tracker_tests.cpp  camera_tests.cpp  tag_tests.cpp  timer_tests.cpp  transform_tests.cpp
src/tests/pose_estimate_filter/: pose_estimate_filter_tests.cpp
src/util/: comm_test.cpp  comm_tool.cpp  i2c_test.cpp  static_transforms_publisher.cpp  tf_test.cpp  transform_cache_test.cpp  transforms_publisher.cpp
