<package format="2">
  <name>apriltag_tracker</name>
  <version>0.1.2</version>
  <description>A package that provides a ROS wrapper for the apriltags C++ package</description>

  <maintainer email="jacob.huesman@ndsu.edu">Jacob Huesman</maintainer>
  <author>Jacob Huesman</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- standard -->
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <!-- custom -->
  <depend>dynamixel</depend>
  <!-- messages -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_generation</depend>
  <!-- tf -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <!-- images -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>
  <depend>theora_image_transport</depend>
  <depend>camera_info_manager</depend>

</package>
